--- a/BackEnd/IdealMaker/build.gradle
+++ b/BackEnd/IdealMaker/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // aws s3
+    implementation platform('software.amazon.awssdk:bom:2.21.4')
+    implementation 'software.amazon.awssdk:s3'
 }
 
 tasks.named('test') {
