--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "flowbite-react": "^0.7.3",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^10.0.4",
     "styled-components": "^6.1.8"
@@ -20,6 +23,7 @@
   "devDependencies": {
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.56",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
