--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -18,7 +18,8 @@
     "react-hook-form": "^7.51.1",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^10.0.4",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
