--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.28.9",
     "axios": "^1.6.7",
     "flowbite-react": "^0.7.3",
     "react": "^18.2.0",
