--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.28.9",
     "axios": "^1.6.7",
     "flowbite-react": "^0.7.3",
+    "js-confetti": "^0.12.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
